# awsdeck

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
src/: action.rs  app.rs  config.rs  effects.rs  main.rs  message.rs  tui.rs  util.rs
src/aws/: context.rs  mod.rs
src/ui/: command_bar.rs  confirm.rs  detail.rs  form.rs  header.rs  help.rs  mod.rs  picker.rs
src/views/: events.rs  lambda.rs  logs.rs  mod.rs  sfn.rs  sqs.rs
