[package]
name = "awsdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8"
aws-sdk-cloudwatchlogs = "1.138"
aws-sdk-eventbridge = "1.109"
aws-sdk-sfn = "1.108"
aws-sdk-sqs = "1.102"
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
serde_json = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
tui-input = "0.15"
