[package]
name = "awsdeck"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
arboard = "3.6.1"
aws-config = "1.8"
aws-sdk-cloudwatchlogs = "1.138"
aws-sdk-eventbridge = "1.109"
aws-sdk-sfn = "1.108"
aws-sdk-sqs = "1.102"
aws-sdk-sts = "1.102"
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
open = "5.3.5"
ratatui = "0.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tui-input = "0.15"
